--- a/kasa-app/src/assets/styles/Gallery.css
+++ b/kasa-app/src/assets/styles/Gallery.css
@@ -1,9 +1,9 @@
 .Gallery {
 	width: 100%;
-	height: 829px;
+	height: 100%;
 	border-radius: 25px;
 	background-color: rgba(246, 246, 246, 1);
-	padding: 26px 20px 26px 20px;
+	padding: 26px 0px 26px 0px;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
