--- a/kasa-app/src/assets/styles/Layout.css
+++ b/kasa-app/src/assets/styles/Layout.css
@@ -1,4 +1,4 @@
-header {
+.LayoutHeader {
 	width: 100%;
 	height: 68px;
 	display: flex;
@@ -8,22 +8,19 @@ header {
 	margin-bottom: 63px;
 }
 
-nav {
+.LayoutHeader__Nav {
 	height: 50%;
 }
 
-nav ul {
+.LayoutHeader__Nav--List {
 	display: flex;
 	flex-direction: row;
 	list-style-type: none;
-}
-
-nav ul li {
-	margin: 0px;
 	font-size: 24px;
+	margin: 0px;
 }
 
-nav ul li a {
+.LayoutHeader__Nav--Links {
 	color: rgba(255, 96, 96, 1);
 	text-decoration: none;
 	margin-left: 25px;
