--- a/kasa-app/src/assets/styles/Section1.css
+++ b/kasa-app/src/assets/styles/Section1.css
@@ -1,11 +1,11 @@
-section {
+.resultSection {
 	width: 100%;
 	height: 223px;
 	border-radius: 25px;
 	margin-bottom: 43px;
 }
 
-section img {
+.resultSection__illustration {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
@@ -14,7 +14,7 @@ section img {
 	filter: brightness(0.7);
 }
 
-h1 {
+.resultSection__title {
 	color: rgba(255, 255, 255, 1);
 	font-family: "Montserrat", sans-serif;
 	font-size: 48px;
