--- a/kasa-app/src/assets/styles/Gallery.css
+++ b/kasa-app/src/assets/styles/Gallery.css
@@ -1,6 +1,7 @@
 .Gallery {
 	width: 100%;
 	height: 100%;
+	/*height: 829px */
 	border-radius: 25px;
 	background-color: rgba(246, 246, 246, 1);
 	padding: 26px 0px 26px 0px;
