--- a/kasa-app/src/assets/styles/FicheLogement.css
+++ b/kasa-app/src/assets/styles/FicheLogement.css
@@ -1,5 +1,53 @@
-.Logement {
-	color: red;
-	position: relative;
-	top: 100px;
+.Carrousel--image {
+	border-radius: 25px;
+	width: 100%;
+	height: 415px;
+	margin-bottom: 30px;
+	object-fit: cover;
+}
+
+.Title {
+	width: fit-content;
+}
+
+.Title--name {
+	color: #ff6060;
+	font-size: 36px;
+	font-weight: 500;
+	margin: 0;
+}
+
+.Title--location {
+	color: #ff6060;
+	font-size: 18px;
+	font-weight: 500;
+	margin: 0;
+}
+
+.Host {
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+.Tags {
+	display: flex;
+}
+
+.Rate {
+	margin-top: 25px;
+	display: flex;
+	justify-content: flex-end;
+}
+
+.Host--name {
+	color: #ff6060;
+	margin-right: 10px;
+}
+.Host--picture {
+	border-radius: 90px;
+}
+
+.Dropdown--equipments {
+	list-style-type: none;
 }
