--- a/kasa-app/src/assets/styles/Thumb.css
+++ b/kasa-app/src/assets/styles/Thumb.css
@@ -22,7 +22,7 @@
 .ThumbBloc__title {
 	color: #ffff;
 	height: 52px;
-	width: 300px;
+	width: 50%;
 	font-weight: 500;
 	margin: 20px;
 	display: flex;
