--- a/kasa-app/src/assets/styles/FicheLogement.css
+++ b/kasa-app/src/assets/styles/FicheLogement.css
@@ -1,9 +1,31 @@
+.Carrousel {
+	display: flex;
+	align-items: center;
+	width: 1340px;
+}
+
 .Carrousel--image {
 	border-radius: 25px;
 	width: 100%;
 	height: 415px;
 	margin-bottom: 30px;
 	object-fit: cover;
+	position: relative;
+	right: 50px;
+	z-index: -9999;
+}
+
+.Carrousel--vectorG {
+	z-index: 1;
+	position: relative;
+	left: 23px;
+	cursor: pointer;
+}
+.Carrousel--vectorD {
+	z-index: 1;
+	position: relative;
+	right: 123px;
+	cursor: pointer;
 }
 
 .Title {
@@ -58,7 +80,7 @@
 	flex-wrap: nowrap;
 }
 
-.Dropdown {
+.dropdownBloc .Dropdown {
 	width: 582px;
 }
 
