--- a/kasa-app/src/assets/styles/FicheLogement.css
+++ b/kasa-app/src/assets/styles/FicheLogement.css
@@ -1,76 +1,20 @@
-.Carrousel {
+.TitleHostBloc {
 	display: flex;
-	align-items: center;
-	width: 1340px;
+	margin-bottom: 20px;
 }
-
-.Carrousel--image {
-	border-radius: 25px;
-	width: 100%;
-	height: 415px;
+.BlocRateTags {
+	display: flex;
+	justify-content: space-between;
 	margin-bottom: 30px;
-	object-fit: cover;
-	position: relative;
-	right: 50px;
-	z-index: -9999;
 }
 
-.Carrousel--vectorG {
-	z-index: 1;
-	position: relative;
-	left: 23px;
-	cursor: pointer;
-}
-.Carrousel--vectorD {
-	z-index: 1;
-	position: relative;
-	right: 123px;
-	cursor: pointer;
-}
-
-.Title {
-	width: fit-content;
-}
-
-.Title--name {
-	color: #ff6060;
-	font-size: 36px;
-	font-weight: 500;
-	margin: 0;
-}
-
-.Title--location {
-	color: #ff6060;
-	font-size: 18px;
-	font-weight: 500;
-	margin: 0;
-}
-
-.Tags {
+.TagsBloc {
 	display: flex;
+	justify-content: flex-start;
 }
-
 .Rate {
 	display: flex;
 	justify-content: flex-end;
-}
-
-.Host {
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
-}
-
-.Host--name {
-	color: #ff6060;
-	margin-right: 10px;
-	width: 93px;
-	text-align: right;
-}
-.Host--picture {
-	border-radius: 90px;
-	width: 64px;
-	height: 64px;
 }
 
 .dropdownBloc {
