--- a/kasa-app/src/assets/styles/StarRate.css
+++ b/kasa-app/src/assets/styles/StarRate.css
@@ -1,8 +1,8 @@
-.ZeroStar {
+.Star {
 	color: #e3e3e3;
 	font-size: 30px;
 }
-.FiveStar {
+/* .FiveStar {
 	color: #ff6060;
 	font-size: 30px;
-}
+} */
