--- a/kasa-app/src/assets/styles/Thumb.css
+++ b/kasa-app/src/assets/styles/Thumb.css
@@ -1,4 +1,4 @@
-.ThumbGeneral {
+.ThumbBloc {
 	width: 340px;
 	height: 340px;
 	background-color: rgba(255, 96, 96, 1);
@@ -6,14 +6,10 @@
 	margin: 30px;
 }
 
-.ThumbBloc {
+.ThumbBloc__image {
 	width: 100%;
 	height: 100%;
-	background: linear-gradient(
-		180deg,
-		rgba(255, 255, 255, 0) 0%,
-		rgba(0, 0, 0, 0.5) 100%
-	);
+	object-fit: cover;
 	border-radius: 10px;
 	display: flex;
 	align-items: flex-end;
@@ -22,9 +18,10 @@
 .ThumbBloc__title {
 	color: #ffff;
 	height: 52px;
-	width: 50%;
 	font-weight: 500;
 	margin: 20px;
+	position: relative;
+	bottom: 75px;
 	display: flex;
 	align-content: stretch;
 }
