--- a/kasa-app/src/assets/styles/Carrousel.css
+++ b/kasa-app/src/assets/styles/Carrousel.css
@@ -20,10 +20,14 @@
 	position: relative;
 	left: 23px;
 	cursor: pointer;
+	background: none;
+	border: none;
 }
 .Carrousel--vectorD {
 	z-index: 1;
 	position: relative;
 	right: 123px;
 	cursor: pointer;
+	background: none;
+	border: none;
 }
