--- a/kasa-app/src/assets/styles/Dropdown.css
+++ b/kasa-app/src/assets/styles/Dropdown.css
@@ -1,41 +1,50 @@
-.Dropdown__topModule {
+.wrapper {
 	width: 100%;
-	height: 47px;
-	background-color: #ff6060;
+}
+
+.accordeon {
+	width: 100%;
+}
+
+.item {
+	background: #ff6060;
 	border-radius: 5px;
+	width: 90%;
+	margin-bottom: 50px;
+}
+
+.item__title {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	z-index: 1;
+	padding: 0px 17px;
 }
 
-.Dropdown__topModule--vector {
-	margin: 16px;
-	cursor: pointer;
-}
-
-.Dropdown__topModule--text {
+.item__title--text {
 	color: #ffff;
 	font-size: 24px;
 	font-weight: 500;
-	margin: 5px;
 }
 
-.Dropdown__lowModule {
-	width: 100%;
+.item__title--vector {
+	cursor: pointer;
+}
+
+.content {
+	max-height: 0;
+	overflow: hidden;
+	transition: all 0.5s cubic-bezier(0, 1, 0, 1);
+}
+.content .show {
+	height: auto;
+	max-height: 9999;
+	transition: all 0.5s cubic-bezier(1, 0, 1, 0);
+}
+
+.content-show {
 	background-color: #f7f7f7;
-	display: flex;
-	align-items: center;
-	margin-bottom: 31px;
-	position: relative;
-	bottom: 9px;
-	border-radius: 5px;
-	z-index: -1;
-}
-
-.Dropdown__lowModule--text {
-	color: #ff6060;
 	font-size: 24px;
 	font-weight: 400;
-	margin: 19px;
+	color: #ff6060;
+	padding: 27px;
 }
