--- a/kasa-app/src/assets/styles/FicheLogement.css
+++ b/kasa-app/src/assets/styles/FicheLogement.css
@@ -1,3 +1,7 @@
+.Body {
+	width: 1240px;
+}
+
 .TitleHostBloc {
 	display: flex;
 	margin-bottom: 20px;
@@ -19,12 +23,10 @@
 
 .dropdownBloc {
 	display: flex;
-	flex-direction: row;
 	justify-content: space-between;
-	flex-wrap: nowrap;
 }
 
-.dropdownBloc .Dropdown {
+.dropdownBloc .wrapper {
 	width: 582px;
 }
 
