--- a/kasa-app/src/assets/styles/index.css
+++ b/kasa-app/src/assets/styles/index.css
@@ -1,8 +1,8 @@
-body {
-	margin: auto;
-	height: 1024px;
-	width: 1240px;
-	padding: 40px 100px;
+#root {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	text-decoration: none;
 	font-family: "Montserrat";
 }
