--- a/kasa-app/src/assets/styles/Carrousel.css
+++ b/kasa-app/src/assets/styles/Carrousel.css
@@ -1,24 +1,27 @@
 .Carrousel {
+	height: 415px;
+	margin-bottom: 30px;
+}
+
+.Carrousel__buttons {
+	padding: 0px 23.36px;
 	display: flex;
-	align-items: center;
-	width: 1340px;
+	justify-content: space-between;
+	position: relative;
+	bottom: 265px;
 }
 
 .Carrousel--image {
 	border-radius: 25px;
 	width: 100%;
 	height: 415px;
-	margin-bottom: 30px;
 	object-fit: cover;
-	position: relative;
-	right: 50px;
 	z-index: -1;
 }
 
 .Carrousel--vectorG {
 	z-index: 1;
 	position: relative;
-	left: 23px;
 	cursor: pointer;
 	background: none;
 	border: none;
@@ -26,7 +29,6 @@
 .Carrousel--vectorD {
 	z-index: 1;
 	position: relative;
-	right: 123px;
 	cursor: pointer;
 	background: none;
 	border: none;
