--- a/kasa-app/src/assets/styles/Section1.css
+++ b/kasa-app/src/assets/styles/Section1.css
@@ -1,5 +1,4 @@
 .resultSection {
-	width: 1240px;
 	margin: auto;
 	height: 223px;
 	border-radius: 25px;
@@ -21,9 +20,9 @@
 	font-weight: 500;
 	position: relative;
 	bottom: 146px;
-	left: 273px;
 	z-index: 1;
 	margin: 0;
-	width: fit-content;
+	text-align: center;
+	width: 100%;
 	height: 68px;
 }
