--- a/kasa-app/src/assets/styles/componentsStyles/Layout.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Layout.css
@@ -1,10 +1,10 @@
 .LayoutHeader {
+	padding: 40px 100px;
 	height: 68px;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
 	align-items: center;
-	margin: 40px 100px;
 }
 
 .LayoutHeader__Nav {
