--- a/kasa-app/src/assets/styles/componentsStyles/Gallery.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Gallery.css
@@ -2,7 +2,7 @@
 	height: 100%;
 	border-radius: 25px;
 	background-color: rgba(246, 246, 246, 1);
-	/* padding: 26px 0px 26px 0px; */
+	padding: 30px 20px;
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
