--- a/kasa-app/src/assets/styles/componentsStyles/Thumb.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Thumb.css
@@ -1,9 +1,15 @@
-.ThumbBloc {
+.ThumbBloc__link {
+	text-decoration: none;
 	width: 340px;
 	height: 340px;
-	background-color: rgba(255, 96, 96, 1);
+	margin: 25px 30px;
+}
+
+.ThumbBloc {
+	width: 100%;
+	height: 100%;
+	/* background-color: rgba(255, 96, 96, 1); */
 	border-radius: 10px;
-	margin: 30px;
 }
 
 .ThumbBloc__image {
@@ -24,8 +30,4 @@
 	bottom: 75px;
 	display: flex;
 	align-content: stretch;
-}
-
-.ThumbBloc__link {
-	text-decoration: none;
 }
