--- a/kasa-app/src/assets/styles/pagesStyles/FicheLogement.css
+++ b/kasa-app/src/assets/styles/pagesStyles/FicheLogement.css
@@ -1,24 +1,23 @@
 .Body {
 	margin: 0px 100px;
 }
-
-.TitleHostBloc {
+.BodyBloc {
 	display: flex;
-	margin-bottom: 20px;
+	margin-bottom: 25px;
 }
-.BlocRateTags {
+
+.BodyBloc__details {
+	width: 75%;
+}
+.RateHostBloc {
+	width: 25%;
 	display: flex;
-	justify-content: space-between;
-	margin-bottom: 30px;
+	flex-direction: column;
+	align-items: flex-end;
 }
 
 .TagsBloc {
 	display: flex;
-	justify-content: flex-start;
-}
-.Rate {
-	display: flex;
-	justify-content: flex-end;
 }
 
 .dropdownBloc {
@@ -36,26 +35,6 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: flex-start;
-}
-
-.Dropdown--equipments {
 	list-style-type: none;
 	margin-bottom: 5px;
-}
-
-.TitleHostBloc {
-	display: flex;
-	justify-content: space-between;
-}
-
-.RateTagsBloc {
-	display: flex;
-	flex-direction: row-reverse;
-	justify-content: space-between;
-	align-items: center;
-}
-
-.Star {
-	color: #e3e3e3;
-	font-size: 30px;
 }
