--- a/kasa-app/src/assets/styles/componentsStyles/Section1.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Section1.css
@@ -26,3 +26,19 @@
 	width: 100%;
 	height: 68px;
 }
+
+@media all and (max-width: 375px) {
+	.resultSection {
+		height: 111px;
+		margin-bottom: 0px;
+	}
+	.resultSection__illustration {
+		height: 111px;
+	}
+	.resultSection__title {
+		font-size: 24px;
+		text-align: left;
+		bottom: 82px;
+		margin-left: 16px;
+	}
+}
