--- a/kasa-app/src/assets/styles/componentsStyles/Thumb.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Thumb.css
@@ -8,7 +8,6 @@
 .ThumbBloc {
 	width: 100%;
 	height: 100%;
-	/* background-color: rgba(255, 96, 96, 1); */
 	border-radius: 10px;
 }
 
@@ -23,6 +22,7 @@
 
 .ThumbBloc__title {
 	color: #ffff;
+	font-size: 18px;
 	height: 52px;
 	font-weight: 500;
 	margin: 20px;
@@ -30,4 +30,19 @@
 	bottom: 75px;
 	display: flex;
 	align-content: stretch;
+}
+@media all and (max-width: 992px) {
+	.ThumbBloc__link {
+		width: 540px;
+		height: 340px;
+		margin: 25px 20px;
+	}
+}
+
+@media all and (max-width: 375px) {
+	.ThumbBloc__link {
+		width: 335px;
+		height: 255px;
+		margin: 10px 0px;
+	}
 }
