--- a/kasa-app/src/assets/styles/pagesStyles/index.css
+++ b/kasa-app/src/assets/styles/pagesStyles/index.css
@@ -1,5 +1,12 @@
 #root {
 	width: 1440px;
+	margin: auto;
 	text-decoration: none;
 	font-family: "Montserrat";
+}
+
+@media all and (max-width: 375px) {
+	#root {
+		width: 375px;
+	}
 }
