--- a/kasa-app/src/assets/styles/componentsStyles/Rate.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Rate.css
@@ -1,4 +1,21 @@
-.Star {
+.StarVote {
+	color: #ff6060;
+	font-size: 30px;
+	margin-left: 10px;
+}
+.StarEmpty {
 	color: #e3e3e3;
 	font-size: 30px;
+	margin-left: 10px;
+}
+
+@media all and (max-width: 375px) {
+	.StarVote {
+		font-size: 15px;
+		margin-left: 5px;
+	}
+	.StarEmpty {
+		font-size: 15px;
+		margin-left: 5px;
+	}
 }
