--- a/kasa-app/src/assets/styles/componentsStyles/Title.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Title.css
@@ -16,3 +16,13 @@
 	margin: 0;
 	margin-bottom: 20px;
 }
+
+@media all and (max-width: 375px) {
+	.Title--name {
+		font-size: 18px;
+	}
+	.Title--location {
+		font-size: 14px;
+		margin-bottom: 10px;
+	}
+}
