--- a/kasa-app/src/assets/styles/pagesStyles/FicheLogement.css
+++ b/kasa-app/src/assets/styles/pagesStyles/FicheLogement.css
@@ -25,7 +25,7 @@
 	justify-content: space-between;
 }
 
-.dropdownBloc .wrapper {
+.dropdownBloc .dropdown {
 	width: 45%;
 }
 
@@ -37,4 +37,30 @@
 	align-items: flex-start;
 	list-style-type: none;
 	margin-bottom: 5px;
+}
+
+@media all and (max-width: 375px) {
+	.Body {
+		margin: 27px 20px;
+	}
+	.BodyBloc {
+		display: block;
+	}
+	.RateHostBloc {
+		width: 100%;
+		margin-top: 17.84px;
+		display: flex;
+		flex-direction: row-reverse;
+		align-items: center;
+		justify-content: space-between;
+	}
+	.dropdownBloc {
+		flex-direction: column;
+	}
+	.dropdownBloc .dropdown {
+		width: 100%;
+	}
+	.dropdownBloc .content-show {
+		height: fit-content;
+	}
 }
