<fix>fix carrousel blocking nav buttons

--- a/kasa-app/src/assets/styles/componentsStyles/Tags.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Tags.css
@@ -1,8 +1,7 @@
 .Tags {
 	background-color: #ff6060;
 	color: #ffff;
-	min-width: 115px;
-	width: fit-content;
+	width: 115px;
 	height: 25px;
 	border-radius: 10px;
 	font-size: 14px;
