--- a/kasa-app/src/assets/styles/componentsStyles/Tags.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Tags.css
@@ -11,6 +11,8 @@
 	justify-content: center;
 	padding: 2px 22px;
 	margin-right: 10px;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 
 @media all and (max-width: 375px) {
