--- a/kasa-app/src/assets/styles/componentsStyles/Section1.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Section1.css
@@ -36,6 +36,8 @@
 		height: 111px;
 	}
 	.resultSection__title {
+		width: 217px;
+		height: 48px;
 		font-size: 24px;
 		text-align: left;
 		bottom: 82px;
