--- a/kasa-app/src/assets/styles/componentsStyles/Footer.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Footer.css
@@ -16,7 +16,8 @@
 }
 
 .FooterDetails__text {
-	color: #ffff;
+	font-family: "Montserrat";
 	font-size: 12px;
+	color: #ffff;
 	font-weight: 500;
 }
