--- a/kasa-app/src/assets/styles/componentsStyles/Carrousel.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Carrousel.css
@@ -4,7 +4,10 @@
 }
 
 .Carrousel__status {
+	font-family: "Montserrat";
+	font-size: 18px;
 	color: #fff;
+	font-weight: 500;
 	margin: 0;
 	position: relative;
 	bottom: 127px;
