--- a/kasa-app/src/assets/styles/pagesStyles/Layout.css
+++ b/kasa-app/src/assets/styles/pagesStyles/Layout.css
@@ -11,12 +11,14 @@
 	display: flex;
 	flex-direction: row;
 	list-style-type: none;
-	font-size: 24px;
 	margin: 0px;
 }
 
 .LayoutHeader__Nav--Links {
-	color: rgba(255, 96, 96, 1);
+	font-family: "Montserrat";
+	font-size: 24px;
+	color: #ff6060;
+	font-weight: 500;
 	text-decoration: none;
 	margin-left: 57px;
 }
