<styles>various styles boost

--- a/kasa-app/src/assets/styles/componentsStyles/Carrousel.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Carrousel.css
@@ -51,6 +51,9 @@
 		height: 255px;
 		margin-bottom: 15px;
 	}
+	.Carrousel--image {
+		border-radius: 10px;
+	}
 	.Carrousel__buttons {
 		padding: 0px;
 		bottom: 142px;
