--- a/kasa-app/src/assets/styles/componentsStyles/Host.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Host.css
@@ -10,7 +10,8 @@
 	color: #ff6060;
 	font-weight: 500;
 	margin-right: 10px;
-	width: min-content;
+	width: 93px;
+	height: 52px;
 	text-align: right;
 }
 .Host--picture {
