--- a/kasa-app/src/assets/styles/componentsStyles/Carrousel.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Carrousel.css
@@ -18,7 +18,7 @@
 	display: flex;
 	justify-content: space-between;
 	position: relative;
-	bottom: 270px;
+	bottom: 284.7px;
 }
 
 .Carrousel--image {
@@ -30,6 +30,8 @@
 }
 
 .Carrousel--vectorG {
+	width: 32px;
+	height: 32px;
 	z-index: 1;
 	position: relative;
 	left: 23.36px;
@@ -38,6 +40,8 @@
 	border: none;
 }
 .Carrousel--vectorD {
+	width: 32px;
+	height: 32px;
 	z-index: 1;
 	position: relative;
 	right: 23.36px;
