--- a/kasa-app/src/assets/styles/pagesStyles/About.css
+++ b/kasa-app/src/assets/styles/pagesStyles/About.css
@@ -21,10 +21,13 @@
 	padding: 0px 100px;
 }
 
+.resultSection {
+	background-image: url("/src/assets/images/BannerAboutImage.png");
+	filter: brightness(70%);
+}
+
 .resultSection__illustration {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
+	display: none;
 }
 .Dropdown-About .dropdown {
 	margin: auto;
@@ -57,5 +60,8 @@
 		font-size: 12px;
 		color: #ff6060;
 		font-weight: 400;
+	}
+	.resultSection {
+		background-image: url("/src/assets/images/BannerAboutImageMobile.png");
 	}
 }
