--- a/kasa-app/src/assets/styles/componentsStyles/Footer.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Footer.css
@@ -2,28 +2,27 @@
 	width: 100%;
 	height: 209px;
 	background-color: #000000;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	text-align: center;
 	margin-top: 25px;
 }
 
-.FooterDetails {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+.FooterBloc_image {
+	margin-top: 66px;
+	margin-bottom: 28.56px;
+	width: 122px;
+	height: 39.44px;
 }
 
-.FooterDetails__text {
+.FooterBloc__details--text {
 	font-family: "Montserrat";
 	font-size: 24px;
 	color: #ffff;
 	font-weight: 500;
+	margin: 0px;
 }
 
 @media all and (max-width: 375px) {
-	.FooterDetails__text {
+	.FooterBloc__details--text {
 		font-family: "Montserrat";
 		font-size: 12px;
 		color: #fff;
