--- a/kasa-app/src/assets/styles/componentsStyles/Rate.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Rate.css
@@ -1,20 +1,45 @@
+.StarScaleBloc {
+	width: 196px;
+	height: 36px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
 .StarVote {
 	color: #ff6060;
 	font-size: 30px;
-	margin-left: 10px;
+	width: 30px;
+	height: 30px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 .StarEmpty {
 	color: #e3e3e3;
 	font-size: 30px;
-	margin-left: 10px;
+	width: 30px;
+	height: 30px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 @media all and (max-width: 375px) {
+	.StarScaleBloc {
+		width: 98px;
+		height: 18px;
+	}
+
 	.StarVote {
+		width: 18px;
+		height: 18px;
 		font-size: 15px;
 		margin-left: 5px;
 	}
 	.StarEmpty {
+		width: 18px;
+		height: 18px;
 		font-size: 15px;
 		margin-left: 5px;
 	}
