--- a/kasa-app/src/assets/styles/componentsStyles/Section1.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Section1.css
@@ -1,28 +1,19 @@
 .resultSection {
-	margin: auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 100%;
 	height: 223px;
 	border-radius: 25px;
 	margin-bottom: 43px;
-}
-
-.resultSection__illustration {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	border-radius: 25px;
-	z-index: -1;
-	filter: brightness(0.7);
-	border-radius: 10px;
+	filter: brightness(70%);
 }
 
 .resultSection__title {
 	font-family: "Montserrat";
 	font-size: 48px;
-	color: #fff;
+	color: rgba(255, 255, 255, 1);
 	font-weight: 500;
-	position: relative;
-	bottom: 146px;
-	z-index: 1;
 	margin: 0;
 	text-align: center;
 	width: 100%;
@@ -34,9 +25,7 @@
 		height: 111px;
 		margin-bottom: 0px;
 	}
-	.resultSection__illustration {
-		height: 111px;
-	}
+
 	.resultSection__title {
 		width: 217px;
 		height: 48px;
