--- a/kasa-app/src/assets/styles/componentsStyles/Tags.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Tags.css
@@ -12,7 +12,6 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	padding: 2px 22px;
 	margin-right: 10px;
 }
 
@@ -21,5 +20,6 @@
 		width: 84px;
 		height: 18px;
 		font-size: 10px;
+		margin: 0px 10px 5px 0px;
 	}
 }
