--- a/kasa-app/src/assets/styles/componentsStyles/Section1.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Section1.css
@@ -1,37 +1,50 @@
 .resultSection {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	width: 100%;
 	height: 223px;
-	border-radius: 25px;
 	margin-bottom: 43px;
-	filter: brightness(70%);
+	border-radius: 25px;
 }
 
 .resultSection__title {
 	font-family: "Montserrat";
 	font-size: 48px;
-	color: rgba(255, 255, 255, 1);
+	color: #fff;
 	font-weight: 500;
 	margin: 0;
 	text-align: center;
 	width: 100%;
 	height: 68px;
+	position: relative;
+	top: 78px;
+	z-index: 1;
+}
+
+.resultSection__background {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 100%;
+	height: 223px;
+	filter: brightness(70%);
+	border-radius: 25px;
+	position: relative;
+	bottom: 78px;
 }
 
 @media all and (max-width: 375px) {
 	.resultSection {
-		height: 111px;
+		width: 100%;
 		margin-bottom: 0px;
+		border-radius: 10px;
 	}
-
 	.resultSection__title {
 		width: 217px;
 		height: 48px;
 		font-size: 24px;
 		text-align: left;
-		bottom: 82px;
 		margin-left: 16px;
+		top: 8px;
+	}
+	.resultSection__background {
+		width: 100%;
 	}
 }
