--- a/kasa-app/src/assets/styles/componentsStyles/Footer.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Footer.css
@@ -18,10 +18,19 @@
 	font-size: 24px;
 	color: #ffff;
 	font-weight: 500;
+	height: 46px;
 	margin: 0px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 @media all and (max-width: 375px) {
+	.FooterBloc_image {
+		margin-top: 62px;
+		margin-bottom: 0px;
+	}
+
 	.FooterBloc__details--text {
 		font-family: "Montserrat";
 		font-size: 12px;
