--- a/kasa-app/src/assets/styles/componentsStyles/Thumb.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Thumb.css
@@ -37,7 +37,7 @@
 	.ThumbBloc__link {
 		width: 540px;
 		height: 340px;
-		margin: 25px 20px;
+		/* margin: 25px 20px; */
 	}
 }
 
@@ -48,7 +48,7 @@
 	.ThumbBloc__link {
 		width: 335px;
 		height: 255px;
-		margin: 20px 0px;
+		margin: 0px 0px 20px 0px;
 	}
 	.ThumbBloc__title {
 		margin: 0px 19.71px 15px 19.71px;
