--- a/kasa-app/src/assets/styles/componentsStyles/Title.css
+++ b/kasa-app/src/assets/styles/componentsStyles/Title.css
@@ -1,36 +1,43 @@
 .Title {
-	width: 635px;
-
-	margin-bottom: 20px;
+	height: 77px;
+	width: 100%;
 }
 
 .Title--name {
+	height: 51px;
 	font-family: "Montserrat";
 	font-size: 36px;
 	color: #ff6060;
 	font-weight: 500;
 	margin: 0;
+	display: flex;
+	align-items: center;
 }
 
 .Title--location {
+	height: 26px;
 	font-family: "Montserrat";
 	font-size: 18px;
 	color: #ff6060;
 	font-weight: 500;
 	margin: 0;
-	margin-bottom: 20px;
+	display: flex;
+	align-items: center;
 }
 
 @media all and (max-width: 375px) {
 	.Title {
 		width: 100%;
-		margin-bottom: 10px;
+		height: 73px;
 	}
 	.Title--name {
 		font-size: 18px;
+		height: 46px;
+		align-items: flex-start;
 	}
 	.Title--location {
 		font-size: 14px;
-		margin-bottom: 10px;
+		height: 22px;
+		align-items: flex-end;
 	}
 }
