--- a/kasa-app/src/assets/styles/pagesStyles/FicheLogement.css
+++ b/kasa-app/src/assets/styles/pagesStyles/FicheLogement.css
@@ -11,6 +11,14 @@
 	font-weight: 400;
 }
 
+.dropdownBloc .accordeon {
+	width: 582px;
+}
+
+.dropdownBloc .accordeon__item__title {
+	height: 52px;
+}
+
 .dropdownBloc .accordeon--content-show {
 	height: 249px;
 	padding: 40px 12px 25px 20px;
@@ -22,23 +30,27 @@
 .BodyBloc {
 	height: 121px;
 	display: flex;
+	justify-content: space-between;
 	margin-bottom: 25px;
 }
 
 .BodyBloc__details {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
 	width: 75%;
 }
 .RateHostBloc {
-	width: 25%;
-	height: 33px;
+	width: 196px;
+	height: 121px;
 	display: flex;
 	flex-direction: column;
+	justify-content: space-between;
 	align-items: flex-end;
 }
 
 .TagsBloc {
 	display: flex;
-	margin-bottom: 24px;
 }
 
 .dropdownBloc {
@@ -62,17 +74,20 @@
 
 @media all and (max-width: 375px) {
 	.Body {
-		margin: 27px 20px;
+		margin: 10px 20px 27px 20px;
 	}
 	.BodyBloc {
 		height: 150px;
+		flex-direction: column;
 		flex-wrap: wrap;
 	}
 	.BodyBloc__details {
 		width: 100%;
+		height: 101px;
 	}
 	.RateHostBloc {
 		width: 100%;
+		height: 33px;
 		display: flex;
 		flex-direction: row-reverse;
 		align-items: center;
@@ -81,7 +96,6 @@
 	.TagsBloc {
 		width: 375px;
 		flex-wrap: wrap;
-		margin-bottom: 0px;
 	}
 	.dropdownBloc {
 		flex-direction: column;
