--- a/kasa-app/src/assets/styles/pagesStyles/Home.css
+++ b/kasa-app/src/assets/styles/pagesStyles/Home.css
@@ -10,11 +10,15 @@
 	.Home .resultSection {
 		height: 111px;
 		position: relative;
-		top: 22px;
+		top: 16px;
+		margin-bottom: 16px;
+	}
+	.Home .resultSection__title {
+		display: block;
 	}
 
 	.Home {
-		padding: 16px 20px;
+		padding: 0px 20px 16px 20px;
 	}
 	.Home .resultSection__background {
 		background-image: url("/src/assets//images/BannerLandingMobile.png");
