--- a/kasa-app/src/assets/styles/pagesStyles/FicheLogement.css
+++ b/kasa-app/src/assets/styles/pagesStyles/FicheLogement.css
@@ -1,29 +1,3 @@
-.accordeon__item__title--text {
-	font-family: "Montserrat";
-	font-size: 18px;
-	color: #fff;
-	font-weight: 500;
-}
-.accordeon--content-show {
-	font-family: "Montserrat";
-	font-size: 18px;
-	color: #ff6060;
-	font-weight: 400;
-}
-
-.dropdownBloc .accordeon {
-	width: 582px;
-}
-
-.dropdownBloc .accordeon__item__title {
-	height: 52px;
-}
-
-.dropdownBloc .accordeon--content-show {
-	height: 249px;
-	padding: 40px 12px 25px 20px;
-}
-
 .Body {
 	margin: 0px 100px;
 }
@@ -53,7 +27,33 @@
 	display: flex;
 }
 
-.dropdownBloc {
+/* .accordeon__item__title--text {
+	font-family: "Montserrat";
+	font-size: 18px;
+	color: #fff;
+	font-weight: 500;
+}
+.accordeon--content-show {
+	font-family: "Montserrat";
+	font-size: 18px;
+	color: #ff6060;
+	font-weight: 400;
+}
+
+.dropdownBloc .accordeon {
+	width: 582px;
+}
+
+.dropdownBloc .accordeon__item__title {
+	height: 52px;
+}
+
+.dropdownBloc .accordeon--content-show {
+	height: 249px;
+	padding: 40px 12px 25px 20px;
+} */
+
+/* .dropdownBloc {
 	display: flex;
 	justify-content: space-between;
 }
@@ -70,7 +70,7 @@
 	align-items: flex-start;
 	list-style-type: none;
 	margin-bottom: 5px;
-}
+} */
 
 @media all and (max-width: 375px) {
 	.Body {
@@ -97,7 +97,7 @@
 		width: 375px;
 		flex-wrap: wrap;
 	}
-	.dropdownBloc {
+	/* .dropdownBloc {
 		flex-direction: column;
 	}
 	.dropdownBloc .dropdown {
@@ -116,5 +116,5 @@
 		color: #ff6060;
 		font-weight: 400;
 		height: fit-content;
-	}
+	} */
 }
